<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_general">

        <EditTextPreference
            app:defaultValue="@string/pref_default_value_display_name"
            app:key="pref_display_name"
            app:title="@string/pref_title_display_name"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:key="pref_email_address"
            app:title="@string/pref_title_email_address"
            app:defaultValue="@string/pref_default_value_email_address"
            android:inputType="textEmailAddress"
            app:useSimpleSummaryProvider="true"
            />
        <ListPreference
            app:key="pref_favourite_social"
            app:title="@string/pref_title_favourite_social"
            app:entries="@array/pref_entries_favourite_social"
            app:entryValues="@array/pref_values_favourite_social"
            app:defaultValue="@string/pref_default_value_favourite_social"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <ListPreference
            app:key="pref_notification_duration"
            app:title="@string/pref_title_notification_duration"
            app:entries="@array/pref_entries_notification_duration"
            app:entryValues="@array/pref_values_notification_duration_values"
            app:defaultValue="@integer/pref_default_value_notification_duration"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
